# fasteval

./: .cursorrules  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-dev.yml  release-dry-run.yml  release.yml
docs/: README.md  docs.config.json
docs/advanced/: _meta.json  configuration.mdx  custom-metrics.mdx  output-collectors.mdx  providers.mdx  traces.mdx
docs/api-reference/: _meta.json  decorators.mdx  evaluator.mdx  models.mdx  score.mdx
docs/concepts/: _meta.json  code-as-judge.mdx  evaluation-strategies.mdx  llm-as-judge.mdx  observability.mdx  scoring-thresholds.mdx
docs/conversation-metrics/: _meta.json  consistency.mdx  context-retention.mdx  topic-drift.mdx
docs/cookbooks/: _meta.json  batch-evaluation.mdx  ci-cd-setup.mdx  custom-domain-metrics.mdx  langgraph-agent.mdx  multi-turn-chatbot.mdx  production-monitoring.mdx  prompt-regression.mdx  rag-pipeline.mdx
docs/cookbooks/langgraph-testing/: _meta.json  harness-basics.mdx  node-mocking.mdx  overview.mdx  sessions.mdx
docs/cookbooks/trace-evaluation-langfuse/: _meta.json  basic-trace-evaluation.mdx  dataset-regression-testing.mdx  overview.mdx  sampling-strategies.mdx
docs/core-concepts/: _meta.json  data-sources.mdx  decorators.mdx  llm-setup.mdx  metric-stacks.mdx  metrics.mdx  pytest.mdx  testing-patterns.mdx
docs/deterministic-metrics/: _meta.json  contains.mdx  exact-match.mdx  json-schema.mdx  regex.mdx  rouge.mdx
docs/getting-started/: _meta.json  installation.mdx  quickstart.mdx
docs/getting-started/introduction/: _meta.json  how-it-works.mdx  overview.mdx  why-fasteval.mdx
docs/human-review/: _meta.json  overview.mdx
docs/llm-metrics/: _meta.json  bias.mdx  coherence.mdx  completeness.mdx  conciseness.mdx  correctness.mdx  criteria.mdx  hallucination.mdx  helpfulness.mdx  instruction-following.mdx  relevance.mdx  toxicity.mdx
docs/multimodal/: _meta.json  audio-metrics.mdx  image-generation.mdx  multimodal-rag.mdx  overview.mdx  vision-metrics.mdx
docs/notebooks/: code-as-judge.ipynb  multimodal-overview.ipynb
docs/notebooks/langfuse-trace-evaluation/: basic-trace-evaluation.ipynb  dataset-regression-testing.ipynb  overview.ipynb  sampling-strategies.ipynb
docs/notebooks/langgraph-testing/: harness-basics.ipynb  node-mocking.ipynb  overview.ipynb  sessions.ipynb
docs/plugins/: _meta.json
docs/plugins/langfuse/: _meta.json  configuration.mdx  datasets.mdx  examples.mdx  overview.mdx  sampling-strategies.mdx  score-reporting.mdx  trace-evaluation.mdx
docs/plugins/langgraph/: _meta.json  chat-and-sessions.mdx  config-context.mdx  mocking.mdx  node-testing.mdx  overview.mdx  quickstart.mdx
docs/plugins/observe/: _meta.json  custom-strategies.mdx  overview.mdx  quickstart.mdx  sampling-strategies.mdx
docs/rag-metrics/: _meta.json  answer-correctness.mdx  contextual-precision.mdx  contextual-recall.mdx  faithfulness.mdx
docs/tool-tranjectory-metrics/: _meta.json  tool-args-match.mdx  tool-call-accuracy.mdx  tool-sequence.mdx
fasteval/: __init__.py  py.typed
fasteval/cache/: __init__.py  memory.py
fasteval/collectors/: __init__.py  collector.py  summary.py
fasteval/collectors/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py
fasteval/core/: __init__.py  decorators.py  evaluator.py  scoring.py
fasteval/metrics/: __init__.py  audio.py  base.py  code_judge.py  conversation.py  deterministic.py  llm.py  multimodal.py  vision.py
fasteval/models/: __init__.py  config.py  evaluation.py  multimodal.py
fasteval/providers/: __init__.py  anthropic.py  base.py  openai.py  registry.py
fasteval/testing/: __init__.py  plugin.py
fasteval/utils/: __init__.py  async_helpers.py  audio.py  formatting.py  image.py  json_parsing.py  terminal_ui.py  text.py
plugins/fasteval-langfuse/: README.md  pyproject.toml
plugins/fasteval-langfuse/examples/: test_datasets.py  test_production_traces.py
plugins/fasteval-langfuse/fasteval_langfuse/: __init__.py  client.py  config.py  decorators.py  score_reporter.py  trace_fetcher.py  utils.py
plugins/fasteval-langfuse/fasteval_langfuse/sampling/: __init__.py  base.py  strategies.py
plugins/fasteval-langfuse/tests/: __init__.py  conftest.py  test_core_logic.py  test_dataset_experiments.py  test_sampling_strategies.py  test_utils.py
plugins/fasteval-langgraph/: README.md  pyproject.toml
plugins/fasteval-langgraph/fasteval_langgraph/: __init__.py  _utils.py  graph.py  mocking.py  models.py
plugins/fasteval-langgraph/tests/: conftest.py  test_chat.py  test_config_context.py  test_mocking.py  test_node.py  test_session.py
plugins/fasteval-observe/: README.md  pyproject.toml
plugins/fasteval-observe/fasteval_observe/: __init__.py  async_handler.py  config.py  decorator.py  logger.py  metrics.py
plugins/fasteval-observe/fasteval_observe/sampling/: __init__.py  base.py  strategies.py
plugins/fasteval-observe/tests/: __init__.py  conftest.py  test_async_handler.py  test_decorator.py  test_integration.py  test_logger.py  test_performance.py  test_sampling_strategies.py
scripts/: bump_version.py
tests/: conftest.py  test_code_judge.py  test_example.py  test_improved_prompts.py  test_pyvet.py
